// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`artworks util functions tests constructAdvSearchFilter test - no search rules 1`] = `
{
  "categories": {
    "$all": [],
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructAdvSearchFilter test - standard input 1`] = `
{
  "categories": {
    "$all": [
      {
        "$elemMatch": {
          "name": "Tytuł",
          "subcategories": {
            "$all": [
              {
                "$elemMatch": {
                  "name": "Podtytuł",
                  "subcategories": {
                    "$all": [
                      {
                        "$elemMatch": {
                          "name": "Podpodtytuł",
                          "subcategories": {
                            "$all": [
                              {
                                "$elemMatch": {
                                  "name": "Podpodpodtytuł",
                                  "value": "testowy podpodpodtytuł",
                                },
                              },
                            ],
                          },
                        },
                      },
                    ],
                  },
                  "value": "testowy podtytuł",
                },
              },
            ],
          },
          "value": "testowy",
        },
      },
      {
        "$elemMatch": {
          "name": "Artyści",
          "value": "testowi",
        },
      },
      {
        "$elemMatch": {
          "name": "Rok",
          "subcategories": {
            "$all": [
              {
                "$elemMatch": {
                  "name": "Miesiąc",
                  "value": "Luty",
                },
              },
            ],
          },
          "value": "966",
        },
      },
    ],
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructQuickSearchFilter test - maxDepth=0 1`] = `
{
  "categories": [],
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructQuickSearchFilter test - maxDepth=1 1`] = `
{
  "categories": {
    "$elemMatch": {
      "$or": [
        {
          "value": "text to find",
        },
      ],
    },
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructQuickSearchFilter test - maxDepth=4 1`] = `
{
  "categories": {
    "$elemMatch": {
      "$or": [
        {
          "value": "text to find",
        },
        {
          "subcategories": {
            "$elemMatch": {
              "$or": [
                {
                  "value": "text to find",
                },
                {
                  "subcategories": {
                    "$elemMatch": {
                      "$or": [
                        {
                          "value": "text to find",
                        },
                        {
                          "subcategories": {
                            "$elemMatch": {
                              "$or": [
                                {
                                  "value": "text to find",
                                },
                              ],
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
        },
      ],
    },
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests sortRecordsByCategory test - category to sort records by doesn't exist on some records 1`] = `
[
  {
    "__v": 0,
    "_id": "6718f28bc89e4d053eebb5df",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [],
        "value": "Inny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Inny artysta",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "1410",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:43.182Z",
    "updatedAt": "2024-10-23T12:56:43.182Z",
  },
  {
    "__v": 0,
    "_id": "6718f272c89e4d053eebb5d8",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "podtytuł",
          },
        ],
        "value": "Tytułowy",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Jan Nowak",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "567",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:18.209Z",
    "updatedAt": "2024-10-23T12:56:18.209Z",
  },
  {
    "__v": 0,
    "_id": "6718f2bfc89e4d053eebb5e6",
    "categories": [
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Pierwsi",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "444",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:57:35.366Z",
    "updatedAt": "2024-10-23T12:57:35.366Z",
  },
  {
    "__v": 0,
    "_id": "6718f2bfc89e4d053eebb5e6",
    "categories": [
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Pierwsi",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "444",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:57:35.366Z",
    "updatedAt": "2024-10-23T12:57:35.366Z",
  },
]
`;

exports[`artworks util functions tests sortRecordsByCategory test - nonexistent category to sort by 1`] = `
[
  {
    "__v": 0,
    "_id": "6718f272c89e4d053eebb5d8",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "podtytuł",
          },
        ],
        "value": "Tytułowy",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Jan Nowak",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "567",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:18.209Z",
    "updatedAt": "2024-10-23T12:56:18.209Z",
  },
  {
    "__v": 0,
    "_id": "6718f28bc89e4d053eebb5df",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [],
        "value": "Inny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Inny artysta",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "1410",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:43.182Z",
    "updatedAt": "2024-10-23T12:56:43.182Z",
  },
  {
    "__v": 0,
    "_id": "6718f2bfc89e4d053eebb5e6",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "Jakiś podtytuł",
          },
        ],
        "value": "Kolejny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Pierwsi",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "444",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:57:35.366Z",
    "updatedAt": "2024-10-23T12:57:35.366Z",
  },
]
`;

exports[`artworks util functions tests sortRecordsByCategory test - sort by Artyści asc 1`] = `
[
  {
    "__v": 0,
    "_id": "6718f28bc89e4d053eebb5df",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [],
        "value": "Inny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Inny artysta",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "1410",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:43.182Z",
    "updatedAt": "2024-10-23T12:56:43.182Z",
  },
  {
    "__v": 0,
    "_id": "6718f272c89e4d053eebb5d8",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "podtytuł",
          },
        ],
        "value": "Tytułowy",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Jan Nowak",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "567",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:18.209Z",
    "updatedAt": "2024-10-23T12:56:18.209Z",
  },
  {
    "__v": 0,
    "_id": "6718f2bfc89e4d053eebb5e6",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "Jakiś podtytuł",
          },
        ],
        "value": "Kolejny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Pierwsi",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "444",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:57:35.366Z",
    "updatedAt": "2024-10-23T12:57:35.366Z",
  },
]
`;

exports[`artworks util functions tests sortRecordsByCategory test - sort by Tytuł asc 1`] = `
[
  {
    "__v": 0,
    "_id": "6718f28bc89e4d053eebb5df",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [],
        "value": "Inny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Inny artysta",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "1410",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:43.182Z",
    "updatedAt": "2024-10-23T12:56:43.182Z",
  },
  {
    "__v": 0,
    "_id": "6718f2bfc89e4d053eebb5e6",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "Jakiś podtytuł",
          },
        ],
        "value": "Kolejny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Pierwsi",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "444",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:57:35.366Z",
    "updatedAt": "2024-10-23T12:57:35.366Z",
  },
  {
    "__v": 0,
    "_id": "6718f272c89e4d053eebb5d8",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "podtytuł",
          },
        ],
        "value": "Tytułowy",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Jan Nowak",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "567",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:18.209Z",
    "updatedAt": "2024-10-23T12:56:18.209Z",
  },
]
`;

exports[`artworks util functions tests sortRecordsByCategory test - sort by Tytuł desc 1`] = `
[
  {
    "__v": 0,
    "_id": "6718f272c89e4d053eebb5d8",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "podtytuł",
          },
        ],
        "value": "Tytułowy",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Jan Nowak",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "567",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:18.209Z",
    "updatedAt": "2024-10-23T12:56:18.209Z",
  },
  {
    "__v": 0,
    "_id": "6718f2bfc89e4d053eebb5e6",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [
          {
            "name": "Podtytuł",
            "value": "Jakiś podtytuł",
          },
        ],
        "value": "Kolejny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Pierwsi",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "444",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:57:35.366Z",
    "updatedAt": "2024-10-23T12:57:35.366Z",
  },
  {
    "__v": 0,
    "_id": "6718f28bc89e4d053eebb5df",
    "categories": [
      {
        "name": "Tytuł",
        "subcategories": [],
        "value": "Inny tytuł",
      },
      {
        "name": "Artyści",
        "subcategories": [],
        "value": "Inny artysta",
      },
      {
        "name": "Rok",
        "subcategories": [],
        "value": "1410",
      },
    ],
    "collectionName": "nowa",
    "createdAt": "2024-10-23T12:56:43.182Z",
    "updatedAt": "2024-10-23T12:56:43.182Z",
  },
]
`;

exports[`artworks util functions tests updateArtworkCategories test - empty arrays 1`] = `[]`;

exports[`artworks util functions tests updateArtworkCategories test - new categories and subcategories 1`] = `
[
  {
    "name": "Wykonawca",
    "subcategories": [],
    "value": "some value",
  },
  {
    "name": "Rok",
    "subcategories": [
      {
        "name": "Miesiąc",
        "subcategories": [
          {
            "name": "Dzień",
            "subcategories": [],
            "value": "some subsubvalue 1",
          },
          {
            "name": "Nowa podpodkategoria",
            "subcategories": [
              {
                "name": "Nowa podpodpodkategoria",
                "subcategories": [
                  {
                    "name": "Nowa podpodpodpodkategoria",
                    "subcategories": [],
                    "value": "",
                  },
                ],
                "value": "",
              },
              {
                "name": "Nowa podpodpodkategoria 2",
                "subcategories": [],
                "value": "",
              },
            ],
            "value": "",
          },
        ],
        "value": "some subvalue 1",
      },
      {
        "name": "Jakaś kategoria",
        "subcategories": [],
        "value": "some subvalue 2",
      },
    ],
    "value": "some value 2",
  },
  {
    "name": "Region",
    "subcategories": [
      {
        "name": "Podregion",
        "subcategories": [],
        "value": "some subvalue 1",
      },
      {
        "name": "Nowa podkategoria",
        "subcategories": [],
        "value": "",
      },
    ],
    "value": "some value 3",
  },
  {
    "name": "Nowa kategoria",
    "subcategories": [],
    "value": "",
  },
  {
    "name": "Nowa kategoria 2",
    "subcategories": [],
    "value": "",
  },
]
`;

exports[`artworks util functions tests updateArtworkCategories test - only category names changed 1`] = `
[
  {
    "name": "Artysta",
    "subcategories": [],
    "value": "some value",
  },
  {
    "name": "Rok",
    "subcategories": [
      {
        "name": "Miesiąc",
        "subcategories": [
          {
            "name": "Dzień",
            "subcategories": [],
            "value": "some subsubvalue 1",
          },
        ],
        "value": "some subvalue 1",
      },
      {
        "name": "Jakaś kategoria",
        "subcategories": [],
        "value": "some subvalue 2",
      },
    ],
    "value": "some value 2",
  },
  {
    "name": "Region",
    "subcategories": [
      {
        "name": "Podregion",
        "subcategories": [],
        "value": "some subvalue 1",
      },
    ],
    "value": "some value 3",
  },
]
`;

exports[`artworks util functions tests updateArtworkCategories test - structure not changed 1`] = `
[
  {
    "name": "Wykonawca",
    "subcategories": [],
    "value": "some value",
  },
  {
    "name": "Rok",
    "subcategories": [
      {
        "name": "Miesiąc",
        "subcategories": [
          {
            "name": "Dzień",
            "subcategories": [],
            "value": "some subsubvalue 1",
          },
        ],
        "value": "some subvalue 1",
      },
      {
        "name": "Jakaś kategoria",
        "subcategories": [],
        "value": "some subvalue 2",
      },
    ],
    "value": "some value 2",
  },
  {
    "name": "Region",
    "subcategories": [
      {
        "name": "Podregion",
        "subcategories": [],
        "value": "some subvalue 1",
      },
    ],
    "value": "some value 3",
  },
]
`;
